# stereo2spatial

./: .gitignore  README.md  devenv.nix  justfile  pyproject.toml
stereo2spatial/: __init__.py  cli.py  combiner.py  exif.py
stereo2spatial/formats/: __init__.py  base.py  jps.py  mpo.py  pair.py  psd.py
swift/: Pair2Spatial.swift
tests/: test_formats.py
